feature: html pages separated;

--- a/html/education.html
+++ b/html/education.html
@@ -1,88 +1,170 @@
-<div>
-  <div id="education-title">Education</div>
-
-  <section id="university-education-section">
-    <div class="education-degree">
-      <!-- <i class="fa-solid fa-graduation-cap"></i> -->
-      Bachelor of Science in Software Engineering
-    </div>
-    <div class="education-place">
-      <!-- <i class="fa-solid fa-location-dot"></i> -->
-      <!-- <i class="fa-solid fa-map-location-dot"></i> -->
-      Institute of Information Technology, University of Dhaka | 2018 - 2022
-    </div>
-
-    <div class="education-grade">
-      <!-- <i class="fa-solid fa-bullseye"></i> -->
-      CGPA: 3.68 / 4.00 (3.92 in the last 4 semesters)
-    </div>
-
-    <div class="education-courses">
-      <p>Notable Courses</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/education.css" />
+    <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+    <title>Education</title>
+  </head>
+  <body>
+    <!-- navbar begins -->
+    <nav>
+      <a class="nav-title" href="/">Home</a>
       <ul>
-        <li>CSE 211: Computer Organization</li>
-        <li>CSE 311: Computer Networking</li>
-        <li>CSE 401: Operating System and System Programming</li>
-        <li>CSE 411: Information Security</li>
-        <li>CSE 502: Web Technology</li>
-        <li>CSE 601: Distributed Systems</li>
-        <li>CSE 605: Software Testing and Quality Assurance</li>
-        <li>CSE 612: Software Security</li>
-        <li>CSE 829: Pattern Recognition and Image Processing</li>
-        <li>CSE 837: Machine Learning</li>
+        <li>
+          <a href="/html/education.html">Education</a>
+        </li>
+        <li>
+          <a href="/html/experience.html">Experience</a>
+        </li>
+        <li>
+          <a href="/html/project.html">Projects</a>
+        </li>
+        <li>
+          <a href="/html/skill.html">Skills</a>
+        </li>
+        <li>
+          <a href="/html/extracurricular.html">Extracurriculars</a>
+        </li>
       </ul>
-    </div>
-  </section>
+    </nav>
+    <!-- navbar ends -->
 
-  <section id="college-education-section">
-    <div class="education-degree">
-      <!-- <i class="fa-solid fa-graduation-cap"></i> -->
-      Higher Secondary Certificate
-    </div>
-    <div class="education-place">
-      <!-- <i class="fa-solid fa-location-dot"></i> -->
-      <!-- <i class="fa-solid fa-map-location-dot"></i> -->
-      Notre Dame College, Dhaka | 2017
-    </div>
+    <main>
+      <!-- sidebar section begins -->
+      <div class="side-bar">
+        <div class="profile">
+          <img class="profile-img" src="/assets/images/ryan.jpg" alt="" />
+          <p class="profile-name">Ahmed Ryan</p>
+          <p class="profession">Software Engineer</p>
+        </div>
 
-    <div class="education-grade">
-      <!-- <i class="fa-solid fa-bullseye"></i> -->
-      Grade: 5.00 / 5.00 (General Scholarship)
-    </div>
-  </section>
+        <a class="profile-link" href="">
+          <i class="fas fa-briefcase profile-icon"> </i>
+          <p>Cefalo Bangladesh Ltd.</p>
+        </a>
 
-  <section id="high-school-education-section">
-    <div class="education-degree">
-      <!-- <i class="fa-solid fa-graduation-cap"></i> -->
-      Secondary School Certificate
-    </div>
-    <div class="education-place">
-      <!-- <i class="fa-solid fa-location-dot"></i> -->
-      <!-- <i class="fa-solid fa-map-location-dot"></i> -->
-      Military Collegiate School, Khulna | 2015
-    </div>
+        <a class="profile-link" href="">
+          <i class="fas fa-envelope profile-icon"> </i>
+          <p>Email</p>
+        </a>
 
-    <div class="education-grade">
-      <!-- <i class="fa-solid fa-bullseye"></i> -->
-      Grade: 5.00 / 5.00 (General Scholarship)
-    </div>
-  </section>
-  </section>
+        <a class="profile-link" href="">
+          <i class="fa-brands fa-github profile-icon"> </i>
+          <p>GitHub</p>
+        </a>
 
-  <section id="school-education-section">
-    <div class="education-degree">
-      <!-- <i class="fa-solid fa-graduation-cap"></i> -->
-      Junior School Certificate
-    </div>
-    <div class="education-place">
-      <!-- <i class="fa-solid fa-location-dot"></i> -->
-      <!-- <i class="fa-solid fa-map-location-dot"></i> -->
-      Military Collegiate School, Khulna | 2012
-    </div>
+        <a class="profile-link" href="">
+          <i class="fa-brands fa-linkedin profile-icon"> </i>
+          <p>LinkedIn</p>
+        </a>
+      </div>
+      <!-- sidebar section ends -->
 
-    <div class="education-grade">
-      <!-- <i class="fa-solid fa-bullseye"></i> -->
-      Grade: 5.00 / 5.00 (Talentpool Scholarship)
-    </div>
-  </section>
-</div>
+      <!-- main body section begins -->
+      <div class="main-body">
+        <section id="university-education-section">
+          <div class="education-degree">
+            <!-- <i class="fa-solid fa-graduation-cap"></i> -->
+            Bachelor of Science in Software Engineering
+          </div>
+          <div class="education-place">
+            <!-- <i class="fa-solid fa-location-dot"></i> -->
+            <!-- <i class="fa-solid fa-map-location-dot"></i> -->
+            Institute of Information Technology, University of Dhaka | 2018 -
+            2022
+          </div>
+
+          <div class="education-grade">
+            <!-- <i class="fa-solid fa-bullseye"></i> -->
+            CGPA: 3.68 / 4.00 (3.92 in the last 4 semesters)
+          </div>
+
+          <div class="education-courses">
+            <p>Notable Courses</p>
+            <ul>
+              <li>CSE 211: Computer Organization</li>
+              <li>CSE 311: Computer Networking</li>
+              <li>CSE 401: Operating System and System Programming</li>
+              <li>CSE 411: Information Security</li>
+              <li>CSE 502: Web Technology</li>
+              <li>CSE 601: Distributed Systems</li>
+              <li>CSE 605: Software Testing and Quality Assurance</li>
+              <li>CSE 612: Software Security</li>
+              <li>CSE 829: Pattern Recognition and Image Processing</li>
+              <li>CSE 837: Machine Learning</li>
+            </ul>
+          </div>
+        </section>
+
+        <section id="college-education-section">
+          <div class="education-degree">
+            <!-- <i class="fa-solid fa-graduation-cap"></i> -->
+            Higher Secondary Certificate
+          </div>
+          <div class="education-place">
+            <!-- <i class="fa-solid fa-location-dot"></i> -->
+            <!-- <i class="fa-solid fa-map-location-dot"></i> -->
+            Notre Dame College, Dhaka | 2017
+          </div>
+
+          <div class="education-grade">
+            <!-- <i class="fa-solid fa-bullseye"></i> -->
+            Grade: 5.00 / 5.00 (General Scholarship)
+          </div>
+        </section>
+
+        <section id="high-school-education-section">
+          <div class="education-degree">
+            <!-- <i class="fa-solid fa-graduation-cap"></i> -->
+            Secondary School Certificate
+          </div>
+          <div class="education-place">
+            <!-- <i class="fa-solid fa-location-dot"></i> -->
+            <!-- <i class="fa-solid fa-map-location-dot"></i> -->
+            Military Collegiate School, Khulna | 2015
+          </div>
+
+          <div class="education-grade">
+            <!-- <i class="fa-solid fa-bullseye"></i> -->
+            Grade: 5.00 / 5.00 (General Scholarship)
+          </div>
+        </section>
+
+        <section id="school-education-section">
+          <div class="education-degree">
+            <!-- <i class="fa-solid fa-graduation-cap"></i> -->
+            Junior School Certificate
+          </div>
+          <div class="education-place">
+            <!-- <i class="fa-solid fa-location-dot"></i> -->
+            <!-- <i class="fa-solid fa-map-location-dot"></i> -->
+            Military Collegiate School, Khulna | 2012
+          </div>
+
+          <div class="education-grade">
+            <!-- <i class="fa-solid fa-bullseye"></i> -->
+            Grade: 5.00 / 5.00 (Talentpool Scholarship)
+          </div>
+        </section>
+      </div>
+      <!-- main body section ends -->
+    </main>
+
+    <!-- footer begins -->
+    <footer id="footer" class="footer">
+      <p>Ahmed Ryan © 2024</p>
+    </footer>
+    <!-- footer ends -->
+  </body>
+</html>
