--- a/html/experience.html
+++ b/html/experience.html
@@ -1,148 +1,236 @@
-<div>
-  <div class="experience-title">Industry Experience</div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/experience.css" />
+    <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+    <title>Education</title>
+  </head>
+  <body>
+    <!-- navbar begins -->
+    <nav>
+      <a class="nav-title" href="/">Home</a>
+      <ul>
+        <li>
+          <a href="/html/education.html">Education</a>
+        </li>
+        <li>
+          <a href="/html/experience.html">Experience</a>
+        </li>
+        <li>
+          <a href="/html/project.html">Projects</a>
+        </li>
+        <li>
+          <a href="/html/skill.html">Skills</a>
+        </li>
+        <li>
+          <a href="/html/extracurricular.html">Extracurriculars</a>
+        </li>
+      </ul>
+    </nav>
+    <!-- navbar ends -->
 
-  <ul>
-    <li>
-      <div class="experience-designation">
-        <!-- <i class="fa-solid fa-graduation-cap"></i> -->
-        Software Engineer
+    <main>
+      <!-- sidebar section begins -->
+      <div class="side-bar">
+        <div class="profile">
+          <img class="profile-img" src="/assets/images/ryan.jpg" alt="" />
+          <p class="profile-name">Ahmed Ryan</p>
+          <p class="profession">Software Engineer</p>
+        </div>
+
+        <a class="profile-link" href="">
+          <i class="fas fa-briefcase profile-icon"> </i>
+          <p>Cefalo Bangladesh Ltd.</p>
+        </a>
+
+        <a class="profile-link" href="">
+          <i class="fas fa-envelope profile-icon"> </i>
+          <p>Email</p>
+        </a>
+
+        <a class="profile-link" href="">
+          <i class="fa-brands fa-github profile-icon"> </i>
+          <p>GitHub</p>
+        </a>
+
+        <a class="profile-link" href="">
+          <i class="fa-brands fa-linkedin profile-icon"> </i>
+          <p>LinkedIn</p>
+        </a>
       </div>
+      <!-- sidebar section ends -->
 
-      <div class="experience-place">
-        <!-- <i class="fa-solid fa-location-dot"></i> -->
-        <!-- <i class="fa-solid fa-map-location-dot"></i> -->
-        Cefalo Bangladesh Ltd. | July 2024 - Present
-      </div>
+      <!-- main body section begins -->
+      <div class="main-body">
+        <div class="experience-title">Industry Experience</div>
 
-      <div class="experience-details">
-        <p>ASP.NET MVC - Vue.js - CSS - SignalR</p>
-      </div>
-
-      <div class="experience-details">
         <ul>
           <li>
-            Developing a Hotel, Restaurant, and Canteen Management System for
-            Plorea using web technologies to digitize services and deliver a
-            modern, user-friendly interface.
+            <div class="experience-designation">
+              <!-- <i class="fa-solid fa-graduation-cap"></i> -->
+              Software Engineer
+            </div>
+
+            <div class="experience-place">
+              <!-- <i class="fa-solid fa-location-dot"></i> -->
+              <!-- <i class="fa-solid fa-map-location-dot"></i> -->
+              Cefalo Bangladesh Ltd. | July 2024 - Present
+            </div>
+
+            <div class="experience-details">
+              <p>ASP.NET MVC - Vue.js - CSS - SignalR</p>
+            </div>
+
+            <div class="experience-details">
+              <ul>
+                <li>
+                  Developing a Hotel, Restaurant, and Canteen Management System
+                  for Plorea using web technologies to digitize services and
+                  deliver a modern, user-friendly interface.
+                </li>
+              </ul>
+            </div>
+          </li>
+
+          <li>
+            <div class="experience-designation">
+              <!-- <i class="fa-solid fa-graduation-cap"></i> -->
+              Associate Software Engineer
+            </div>
+
+            <div class="experience-place">
+              <!-- <i class="fa-solid fa-location-dot"></i> -->
+              <!-- <i class="fa-solid fa-map-location-dot"></i> -->
+              Cefalo Bangladesh Ltd. | Jan 2023 - June 2024
+            </div>
+
+            <div class="experience-details">
+              <p>
+                C# - ASP.NET Core - EF Core - MSSQL - HTML - JavaScript -
+                React.js
+              </p>
+            </div>
+
+            <div class="experience-details">
+              <ul>
+                <li>
+                  Worked for a year on an in-house HR Portal Application, where
+                  I integrated biometric devices, migrated user data from legacy
+                  devices to new ones, and implemented several features such as
+                  remote work application functionality and employee team
+                  history tracking.
+                </li>
+              </ul>
+            </div>
+          </li>
+
+          <li>
+            <div class="experience-designation">
+              <!-- <i class="fa-solid fa-graduation-cap"></i> -->
+              Trainee Software Engineer
+            </div>
+
+            <div class="experience-place">
+              <!-- <i class="fa-solid fa-location-dot"></i> -->
+              <!-- <i class="fa-solid fa-map-location-dot"></i> -->
+              Cefalo Bangladesh Ltd. | Jan 2022 - Dec 2022
+            </div>
+
+            <div class="experience-details">
+              <p>
+                C# - ASP.NET Core - EF Core - MSSQL - HTML - JavaScript -
+                React.js
+              </p>
+            </div>
+
+            <div class="experience-details">
+              <ul>
+                <li>
+                  Developed a blog publishing client and server application as
+                  part of a training program, gaining hands-on experience with
+                  Internet protocols, HTTP, Cross-Origin Resource Sharing
+                  (CORS), REST APIs, and Linux systems.
+                </li>
+              </ul>
+            </div>
+          </li>
+
+          <li>
+            <div class="experience-designation">
+              <!-- <i class="fa-solid fa-graduation-cap"></i> -->
+              Technical Writer
+            </div>
+
+            <div class="experience-place">
+              <!-- <i class="fa-solid fa-location-dot"></i> -->
+              <!-- <i class="fa-solid fa-map-location-dot"></i> -->
+              Code Maze | May 2023 - Oct 2023
+            </div>
+
+            <div class="experience-details">
+              <p>Technical Writing - C# - .NET</p>
+            </div>
+
+            <div class="experience-details">
+              <ul>
+                <li>
+                  Gained valuable experience in breaking down complex technical
+                  concepts into clear, concise content, honing skills in
+                  technical writing, content structuring, and effectively
+                  communicating coding practices to an audience of around 1
+                  million readers.
+                </li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+
+        <br />
+
+        <div class="experience-title">Research Experience</div>
+
+        <ul>
+          <li>
+            <div class="experience-designation">
+              <!-- <i class="fa-solid fa-graduation-cap"></i> -->
+              Research Associate
+            </div>
+
+            <div class="experience-place">
+              <!-- <i class="fa-solid fa-location-dot"></i> -->
+              <!-- <i class="fa-solid fa-map-location-dot"></i> -->
+              Intelligent Systems and HCI Research Group | June 2024 - Present
+            </div>
+
+            <div class="experience-details">
+              <ul>
+                <li>
+                  Currently working on "Automated Community Smell Detection
+                  Using In-Context Learning Capabilities of GPT"
+                </li>
+              </ul>
+            </div>
           </li>
         </ul>
       </div>
-    </li>
+      <!-- main body section ends -->
+    </main>
 
-    <li>
-      <div class="experience-designation">
-        <!-- <i class="fa-solid fa-graduation-cap"></i> -->
-        Associate Software Engineer
-      </div>
-
-      <div class="experience-place">
-        <!-- <i class="fa-solid fa-location-dot"></i> -->
-        <!-- <i class="fa-solid fa-map-location-dot"></i> -->
-        Cefalo Bangladesh Ltd. | Jan 2023 - June 2024
-      </div>
-
-      <div class="experience-details">
-        <p>
-          C# - ASP.NET Core - EF Core - MSSQL - HTML - JavaScript - React.js
-        </p>
-      </div>
-
-      <div class="experience-details">
-        <ul>
-          <li>
-            Worked for a year on an in-house HR Portal Application, where I
-            integrated biometric devices, migrated user data from legacy devices
-            to new ones, and implemented several features such as remote work
-            application functionality and employee team history tracking.
-          </li>
-        </ul>
-      </div>
-    </li>
-
-    <li>
-      <div class="experience-designation">
-        <!-- <i class="fa-solid fa-graduation-cap"></i> -->
-        Trainee Software Engineer
-      </div>
-
-      <div class="experience-place">
-        <!-- <i class="fa-solid fa-location-dot"></i> -->
-        <!-- <i class="fa-solid fa-map-location-dot"></i> -->
-        Cefalo Bangladesh Ltd. | Jan 2022 - Dec 2022
-      </div>
-
-      <div class="experience-details">
-        <p>
-          C# - ASP.NET Core - EF Core - MSSQL - HTML - JavaScript - React.js
-        </p>
-      </div>
-
-      <div class="experience-details">
-        <ul>
-          <li>
-            Developed a blog publishing client and server application as part of
-            a training program, gaining hands-on experience with Internet
-            protocols, HTTP, Cross-Origin Resource Sharing (CORS), REST APIs,
-            and Linux systems.
-          </li>
-        </ul>
-      </div>
-    </li>
-
-    <li>
-      <div class="experience-designation">
-        <!-- <i class="fa-solid fa-graduation-cap"></i> -->
-        Technical Writer
-      </div>
-
-      <div class="experience-place">
-        <!-- <i class="fa-solid fa-location-dot"></i> -->
-        <!-- <i class="fa-solid fa-map-location-dot"></i> -->
-        Code Maze | May 2023 - Oct 2023
-      </div>
-
-      <div class="experience-details">
-        <p>Technical Writing - C# - .NET</p>
-      </div>
-
-      <div class="experience-details">
-        <ul>
-          <li>
-            Gained valuable experience in breaking down complex technical
-            concepts into clear, concise content, honing skills in technical
-            writing, content structuring, and effectively communicating coding
-            practices to an audience of around 1 million readers.
-          </li>
-        </ul>
-      </div>
-    </li>
-  </ul>
-
-  <br />
-
-  <div class="experience-title">Research Experience</div>
-
-  <ul>
-    <li>
-      <div class="experience-designation">
-        <!-- <i class="fa-solid fa-graduation-cap"></i> -->
-        Research Associate
-      </div>
-
-      <div class="experience-place">
-        <!-- <i class="fa-solid fa-location-dot"></i> -->
-        <!-- <i class="fa-solid fa-map-location-dot"></i> -->
-        Intelligent Systems and HCI Research Group | June 2024 - Present
-      </div>
-
-      <div class="experience-details">
-        <ul>
-          <li>
-            Currently working on "Automated Community Smell Detection Using
-            In-Context Learning Capabilities of GPT"
-          </li>
-        </ul>
-      </div>
-    </li>
-  </ul>
-</div>
+    <!-- footer begins -->
+    <footer class="footer">
+      <p>Ahmed Ryan © 2024</p>
+    </footer>
+    <!-- footer ends -->
+  </body>
+</html>
