feature: css updated;

--- a/html/education.html
+++ b/html/education.html
@@ -73,90 +73,96 @@
 
       <!-- main body section begins -->
       <div class="main-body">
-        <section id="university-education-section">
-          <div class="education-degree">
-            <!-- <i class="fa-solid fa-graduation-cap"></i> -->
-            Bachelor of Science in Software Engineering
-          </div>
-          <div class="education-place">
-            <!-- <i class="fa-solid fa-location-dot"></i> -->
-            <!-- <i class="fa-solid fa-map-location-dot"></i> -->
-            Institute of Information Technology, University of Dhaka | 2018 -
-            2022
-          </div>
+        <br />
+        <br />
+        <div class="education-title">Academics</div>
 
-          <div class="education-grade">
-            <!-- <i class="fa-solid fa-bullseye"></i> -->
-            CGPA: 3.68 / 4.00 (3.92 in the last 4 semesters)
-          </div>
+        <ul class="education-list">
+          <li id="university-education-section">
+            <div class="education-degree">
+              <!-- <i class="fa-solid fa-graduation-cap"></i> -->
+              Bachelor of Science in Software Engineering
+            </div>
+            <div class="education-place">
+              <!-- <i class="fa-solid fa-location-dot"></i> -->
+              <!-- <i class="fa-solid fa-map-location-dot"></i> -->
+              Institute of Information Technology, University of Dhaka | 2018 -
+              2022
+            </div>
 
-          <div class="education-courses">
-            <p>Notable Courses</p>
-            <ul>
-              <li>CSE 211: Computer Organization</li>
-              <li>CSE 311: Computer Networking</li>
-              <li>CSE 401: Operating System and System Programming</li>
-              <li>CSE 411: Information Security</li>
-              <li>CSE 502: Web Technology</li>
-              <li>CSE 601: Distributed Systems</li>
-              <li>CSE 605: Software Testing and Quality Assurance</li>
-              <li>CSE 612: Software Security</li>
-              <li>CSE 829: Pattern Recognition and Image Processing</li>
-              <li>CSE 837: Machine Learning</li>
-            </ul>
-          </div>
-        </section>
+            <div class="education-grade">
+              <!-- <i class="fa-solid fa-bullseye"></i> -->
+              CGPA: 3.68 / 4.00 (3.92 in the last 4 semesters)
+            </div>
 
-        <section id="college-education-section">
-          <div class="education-degree">
-            <!-- <i class="fa-solid fa-graduation-cap"></i> -->
-            Higher Secondary Certificate
-          </div>
-          <div class="education-place">
-            <!-- <i class="fa-solid fa-location-dot"></i> -->
-            <!-- <i class="fa-solid fa-map-location-dot"></i> -->
-            Notre Dame College, Dhaka | 2017
-          </div>
+            <div class="education-courses">
+              <p>Notable Courses</p>
+              <ul>
+                <li>CSE 211: Computer Organization</li>
+                <li>CSE 311: Computer Networking</li>
+                <li>CSE 401: Operating System and System Programming</li>
+                <li>CSE 411: Information Security</li>
+                <li>CSE 502: Web Technology</li>
+                <li>CSE 601: Distributed Systems</li>
+                <li>CSE 605: Software Testing and Quality Assurance</li>
+                <li>CSE 612: Software Security</li>
+                <li>CSE 829: Pattern Recognition and Image Processing</li>
+                <li>CSE 837: Machine Learning</li>
+              </ul>
+            </div>
+          </li>
 
-          <div class="education-grade">
-            <!-- <i class="fa-solid fa-bullseye"></i> -->
-            Grade: 5.00 / 5.00 (General Scholarship)
-          </div>
-        </section>
+          <li id="college-education-section">
+            <div class="education-degree">
+              <!-- <i class="fa-solid fa-graduation-cap"></i> -->
+              Higher Secondary Certificate
+            </div>
+            <div class="education-place">
+              <!-- <i class="fa-solid fa-location-dot"></i> -->
+              <!-- <i class="fa-solid fa-map-location-dot"></i> -->
+              Notre Dame College, Dhaka | 2017
+            </div>
 
-        <section id="high-school-education-section">
-          <div class="education-degree">
-            <!-- <i class="fa-solid fa-graduation-cap"></i> -->
-            Secondary School Certificate
-          </div>
-          <div class="education-place">
-            <!-- <i class="fa-solid fa-location-dot"></i> -->
-            <!-- <i class="fa-solid fa-map-location-dot"></i> -->
-            Military Collegiate School, Khulna | 2015
-          </div>
+            <div class="education-grade">
+              <!-- <i class="fa-solid fa-bullseye"></i> -->
+              Grade: 5.00 / 5.00 (Scholarship in General Category)
+            </div>
+          </li>
 
-          <div class="education-grade">
-            <!-- <i class="fa-solid fa-bullseye"></i> -->
-            Grade: 5.00 / 5.00 (General Scholarship)
-          </div>
-        </section>
+          <li id="high-school-education-section">
+            <div class="education-degree">
+              <!-- <i class="fa-solid fa-graduation-cap"></i> -->
+              Secondary School Certificate
+            </div>
+            <div class="education-place">
+              <!-- <i class="fa-solid fa-location-dot"></i> -->
+              <!-- <i class="fa-solid fa-map-location-dot"></i> -->
+              Military Collegiate School, Khulna | 2015
+            </div>
 
-        <section id="school-education-section">
-          <div class="education-degree">
-            <!-- <i class="fa-solid fa-graduation-cap"></i> -->
-            Junior School Certificate
-          </div>
-          <div class="education-place">
-            <!-- <i class="fa-solid fa-location-dot"></i> -->
-            <!-- <i class="fa-solid fa-map-location-dot"></i> -->
-            Military Collegiate School, Khulna | 2012
-          </div>
+            <div class="education-grade">
+              <!-- <i class="fa-solid fa-bullseye"></i> -->
+              Grade: 5.00 / 5.00 (Scholarship in General Category)
+            </div>
+          </li>
 
-          <div class="education-grade">
-            <!-- <i class="fa-solid fa-bullseye"></i> -->
-            Grade: 5.00 / 5.00 (Talentpool Scholarship)
-          </div>
-        </section>
+          <li id="school-education-section">
+            <div class="education-degree">
+              <!-- <i class="fa-solid fa-graduation-cap"></i> -->
+              Junior School Certificate
+            </div>
+            <div class="education-place">
+              <!-- <i class="fa-solid fa-location-dot"></i> -->
+              <!-- <i class="fa-solid fa-map-location-dot"></i> -->
+              Military Collegiate School, Khulna | 2012
+            </div>
+
+            <div class="education-grade">
+              <!-- <i class="fa-solid fa-bullseye"></i> -->
+              Grade: 5.00 / 5.00 (Scholarship in Talentpool Category)
+            </div>
+          </li>
+        </ul>
       </div>
       <!-- main body section ends -->
     </main>
