--- a/html/experience.html
+++ b/html/experience.html
@@ -73,9 +73,11 @@
 
       <!-- main body section begins -->
       <div class="main-body">
+        <br />
+        <br />
         <div class="experience-title">Industry Experience</div>
 
-        <ul>
+        <ul class="experience-list">
           <li>
             <div class="experience-designation">
               <!-- <i class="fa-solid fa-graduation-cap"></i> -->
@@ -85,7 +87,8 @@
             <div class="experience-place">
               <!-- <i class="fa-solid fa-location-dot"></i> -->
               <!-- <i class="fa-solid fa-map-location-dot"></i> -->
-              Cefalo Bangladesh Ltd. | July 2024 - Present
+              <a href="https://www.cefalo.com/">Cefalo Bangladesh Ltd.</a>
+              &nbsp; | July 2024 - Present
             </div>
 
             <div class="experience-details">
@@ -112,7 +115,8 @@
             <div class="experience-place">
               <!-- <i class="fa-solid fa-location-dot"></i> -->
               <!-- <i class="fa-solid fa-map-location-dot"></i> -->
-              Cefalo Bangladesh Ltd. | Jan 2023 - June 2024
+              <a href="https://www.cefalo.com/">Cefalo Bangladesh Ltd.</a>
+              &nbsp; | Jan 2023 - June 2024
             </div>
 
             <div class="experience-details">
@@ -144,7 +148,8 @@
             <div class="experience-place">
               <!-- <i class="fa-solid fa-location-dot"></i> -->
               <!-- <i class="fa-solid fa-map-location-dot"></i> -->
-              Cefalo Bangladesh Ltd. | Jan 2022 - Dec 2022
+              <a href="https://www.cefalo.com/">Cefalo Bangladesh Ltd.</a>
+              &nbsp; | Jan 2022 - Dec 2022
             </div>
 
             <div class="experience-details">
@@ -175,7 +180,8 @@
             <div class="experience-place">
               <!-- <i class="fa-solid fa-location-dot"></i> -->
               <!-- <i class="fa-solid fa-map-location-dot"></i> -->
-              Code Maze | May 2023 - Oct 2023
+              <a href="https://code-maze.com/">Code Maze</a> &nbsp; | May 2023 -
+              Oct 2023
             </div>
 
             <div class="experience-details">
@@ -200,7 +206,7 @@
 
         <div class="experience-title">Research Experience</div>
 
-        <ul>
+        <ul class="experience-list">
           <li>
             <div class="experience-designation">
               <!-- <i class="fa-solid fa-graduation-cap"></i> -->
