feature: scroll to top added;

--- a/html/extracurricular.html
+++ b/html/extracurricular.html
@@ -18,8 +18,10 @@
   <body id="body">
     <!-- navbar begins -->
     <nav>
-      <a class="nav-title" href="/html/index.html">Home</a>
       <ul>
+        <li>
+          <a href="/">About Me</a>
+        </li>
         <li>
           <a href="/html/education.html">Education</a>
         </li>
@@ -33,7 +35,7 @@
           <a href="/html/skill.html">Skills</a>
         </li>
         <li>
-          <a href="/html/extracurricular.html">Extracurriculars</a>
+          <a href="/html/extracurricular.html">Volunteering</a>
         </li>
       </ul>
     </nav>
@@ -50,32 +52,39 @@
           />
           <p class="profile-name">Ahmed Ryan</p>
           <p class="profession">Software Engineer</p>
+
+          <a class="profile-link" href="">
+            <i class="fas fa-briefcase profile-icon"> </i>
+            <p>Cefalo Bangladesh Ltd.</p>
+          </a>
+
+          <a class="profile-link" href="">
+            <i class="fas fa-envelope profile-icon"> </i>
+            <p>Email</p>
+          </a>
+
+          <a class="profile-link" href="">
+            <i class="fa-brands fa-github profile-icon"> </i>
+            <p>GitHub</p>
+          </a>
+
+          <a class="profile-link" href="">
+            <i class="fa-brands fa-linkedin profile-icon"> </i>
+            <p>LinkedIn</p>
+          </a>
+
+          <button onclick="scrollToTop()" class="scroll-btn">
+            <i class="fa fa-chevron-circle-up fa-xl" aria-hidden="true"></i>
+          </button>
         </div>
-
-        <a class="profile-link" href="">
-          <i class="fas fa-briefcase profile-icon"> </i>
-          <p>Cefalo Bangladesh Ltd.</p>
-        </a>
-
-        <a class="profile-link" href="">
-          <i class="fas fa-envelope profile-icon"> </i>
-          <p>Email</p>
-        </a>
-
-        <a class="profile-link" href="">
-          <i class="fa-brands fa-github profile-icon"> </i>
-          <p>GitHub</p>
-        </a>
-
-        <a class="profile-link" href="">
-          <i class="fa-brands fa-linkedin profile-icon"> </i>
-          <p>LinkedIn</p>
-        </a>
       </div>
       <!-- sidebar ends -->
 
       <!-- main body section begins -->
-      <div class="main-body"></div>
+      <div class="main-body">
+        <br />
+        <br />
+      </div>
       <!-- main body section ends -->
     </main>
 
@@ -86,6 +95,6 @@
     <!-- footer ends -->
 
     <!-- javascript imports -->
-    <script src="js/script.js"></script>
+    <script src="/js/script.js"></script>
   </body>
 </html>
