--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
   <body id="body">
     <!-- navbar begins -->
     <nav>
-      <a class="nav-title" href="/html/index.html">Home</a>
       <ul>
+        <li>
+          <a href="/html/index.html">About Me</a>
+        </li>
         <li>
           <a href="/html/education.html">Education</a>
         </li>
@@ -49,27 +51,31 @@
           />
           <p class="profile-name">Ahmed Ryan</p>
           <p class="profession">Software Engineer</p>
+
+          <a class="profile-link" href="">
+            <i class="fas fa-briefcase profile-icon"> </i>
+            <p>Cefalo Bangladesh Ltd.</p>
+          </a>
+
+          <a class="profile-link" href="">
+            <i class="fas fa-envelope profile-icon"> </i>
+            <p>Email</p>
+          </a>
+
+          <a class="profile-link" href="">
+            <i class="fa-brands fa-github profile-icon"> </i>
+            <p>GitHub</p>
+          </a>
+
+          <a class="profile-link" href="">
+            <i class="fa-brands fa-linkedin profile-icon"> </i>
+            <p>LinkedIn</p>
+          </a>
+
+          <button onclick="scrollToTop()" class="scroll-btn">
+            <i class="fa fa-chevron-circle-up fa-xl" aria-hidden="true"></i>
+          </button>
         </div>
-
-        <a class="profile-link" href="">
-          <i class="fas fa-briefcase profile-icon"> </i>
-          <p>Cefalo Bangladesh Ltd.</p>
-        </a>
-
-        <a class="profile-link" href="">
-          <i class="fas fa-envelope profile-icon"> </i>
-          <p>Email</p>
-        </a>
-
-        <a class="profile-link" href="">
-          <i class="fa-brands fa-github profile-icon"> </i>
-          <p>GitHub</p>
-        </a>
-
-        <a class="profile-link" href="">
-          <i class="fa-brands fa-linkedin profile-icon"> </i>
-          <p>LinkedIn</p>
-        </a>
       </div>
       <!-- sidebar ends -->
 
